--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
                 <ul data-role="listview">                    
                     <li><a href="ex01.html" target="_self" rel="external">연습1</a></li>
                     <li><a href="ex02.html" target="_self" rel="external">연습2</a></li>
-                    <li><a href="ex03.html" target="_self" rel="external">연습3</a></li>                    
+                    <li><a href="ex03.html" target="_self" rel="external">연습3</a></li>
+                    <li><a href="ex04.html" target="_self" rel="external">도서검색</a></li>                     
                 </ul>                                    
         </div>
             <div data-role="footer"><h2>인천일보아카데미</h2></div>
